--- a/alu.cmp
+++ b/alu.cmp
@@ -1,43 +1,84 @@
-| inX    | inY    | c4 | c3 | c2 | c1 | c0 |  out    |
-|--------|--------|----|----|----|----|----|---------|
-|    0   |    0   | 0  | 0  | 0  | 0  | 0  |     0   |
-|    0   |    0   | 0  | 0  | 0  | 0  | 1  |     1   |
-|    0   |    0   | 0  | 0  | 0  | 1  | 0  |    -1   |
-|    0   |    0   | 0  | 0  | 0  | 1  | 1  |     0   |
-|    0   |    0   | 0  | 0  | 1  | 0  | 0  |     0   |
-|    0   |    0   | 0  | 0  | 1  | 0  | 1  |    -1   |
-|    0   |    0   | 0  | 0  | 1  | 1  | 0  |    -1   |
-|    0   |    0   | 0  | 0  | 1  | 1  | 1  |     0   |
-|    0   |    0   | 0  | 1  | 0  | 0  | 0  |     0   |
-|    0   |    0   | 0  | 1  | 0  | 0  | 1  |     1   |
-|    0   |    0   | 0  | 1  | 0  | 1  | 0  |     1   |
-|    0   |    0   | 0  | 1  | 0  | 1  | 1  |    -1   |
-|    0   |    0   | 0  | 1  | 1  | 0  | 0  |    -1   |
-|    0   |    0   | 0  | 1  | 1  | 0  | 1  |     0   |
-|    0   |    0   | 0  | 1  | 1  | 1  | 0  |     0   |
-|    0   |    0   | 0  | 1  | 1  | 1  | 1  |     0   |
-|    0   |    0   | 1  | 0  | 0  | 0  | 0  |     0   |
-|    0   |    0   | 1  | 0  | 0  | 0  | 1  |     0   |
-|    0   |    0   | 1  | 0  | 0  | 1  | 0  |     0   |
-|    0   |    0   | 1  | 0  | 0  | 1  | 1  |    -1   |
+inX	inY	c4	c3	c2	c1	c0	out
+0	0	0	0	0	0	0	0
+0	0	0	0	0	0	1	1
+0	0	0	0	0	1	0	-1
+0	0	0	0	0	1	1	0
+0	0	0	0	1	0	0	0
+0	0	0	0	1	0	1	-1
+0	0	0	0	1	1	0	-1
+0	0	0	0	1	1	1	0
+0	0	0	1	0	0	0	0
+0	0	0	1	0	0	1	1
+0	0	0	1	0	1	0	1
+0	0	0	1	0	1	1	-1
+0	0	0	1	1	0	0	-1
+0	0	0	1	1	0	1	0
+0	0	0	1	1	1	0	0
+0	0	0	1	1	1	1	0
+0	0	1	0	0	0	0	0
+0	0	1	0	0	0	1	0
+0	0	1	0	0	1	0	0
+0	0	1	0	0	1	1	-1
 
-|   -1   |   -1   | 0  | 0  | 0  | 0  | 0  |     0   |
-|   -1   |   -1   | 0  | 0  | 0  | 0  | 1  |     1   |
-|   -1   |   -1   | 0  | 0  | 0  | 1  | 0  |    -1   |
-|   -1   |   -1   | 0  | 0  | 0  | 1  | 1  |    -1   |
-|   -1   |   -1   | 0  | 0  | 1  | 0  | 0  |    -1   |
-|   -1   |   -1   | 0  | 0  | 1  | 0  | 1  |     0   |
-|   -1   |   -1   | 0  | 0  | 1  | 1  | 0  |     0   |
-|   -1   |   -1   | 0  | 0  | 1  | 1  | 1  |     1   |
-|   -1   |   -1   | 0  | 1  | 0  | 0  | 0  |     1   |
-|   -1   |   -1   | 0  | 1  | 0  | 0  | 1  |     0   |
-|   -1   |   -1   | 0  | 1  | 0  | 1  | 0  |     0   |
-|   -1   |   -1   | 0  | 1  | 0  | 1  | 1  |    -2   |
-|   -1   |   -1   | 0  | 1  | 1  | 0  | 0  |    -2   |
-|   -1   |   -1   | 0  | 1  | 1  | 0  | 1  |    -2   |
-|   -1   |   -1   | 0  | 1  | 1  | 1  | 0  |     0   |
-|   -1   |   -1   | 0  | 1  | 1  | 1  | 1  |     0   |
-|   -1   |   -1   | 1  | 0  | 0  | 0  | 0  |    -1   |
-|   -1   |   -1   | 1  | 0  | 0  | 0  | 1  |    -1   |
-|   -1   |   -1   | 1  | 0  | 0  | 1  | 0  |     0   |
-|   -1   |   -1   | 1  | 0  | 0  | 1  | 1  |    -1   |
+-1	-1	0	0	0	0	0	0
+-1	-1	0	0	0	0	1	1
+-1	-1	0	0	0	1	0	-1
+-1	-1	0	0	0	1	1	-1
+-1	-1	0	0	1	0	0	-1
+-1	-1	0	0	1	0	1	0
+-1	-1	0	0	1	1	0	0
+-1	-1	0	0	1	1	1	1
+-1	-1	0	1	0	0	0	1
+-1	-1	0	1	0	0	1	0
+-1	-1	0	1	0	1	0	0
+-1	-1	0	1	0	1	1	-2
+-1	-1	0	1	1	0	0	-2
+-1	-1	0	1	1	0	1	-2
+-1	-1	0	1	1	1	0	0
+-1	-1	0	1	1	1	1	0
+-1	-1	1	0	0	0	0	-1
+-1	-1	1	0	0	0	1	-1
+-1	-1	1	0	0	1	0	0
+-1	-1	1	0	0	1	1	-1
+
+12345	54321	0	0	0	0	0	0
+12345	54321	0	0	0	0	1	1
+12345	54321	0	0	0	1	0	-1
+12345	54321	0	0	0	1	1	12345
+12345	54321	0	0	1	0	0	54321
+12345	54321	0	0	1	0	1	-12346
+12345	54321	0	0	1	1	0	-54322
+12345	54321	0	0	1	1	1	-12345
+12345	54321	0	1	0	0	0	-54321
+12345	54321	0	1	0	0	1	12346
+12345	54321	0	1	0	1	0	54322
+12345	54321	0	1	0	1	1	12344
+12345	54321	0	1	1	0	0	54320
+12345	54321	0	1	1	0	1	1130
+12345	54321	0	1	1	1	0	-41976
+12345	54321	0	1	1	1	1	41976
+12345	54321	1	0	0	0	0	4097
+12345	54321	1	0	0	0	1	61449
+12345	54321	1	0	0	1	0	-7264
+12345	54321	1	0	0	1	1	-58273
+
+-12345	11215	0	0	0	0	0	0
+-12345	11215	0	0	0	0	1	1
+-12345	11215	0	0	0	1	0	-1
+-12345	11215	0	0	0	1	1	-12345
+-12345	11215	0	0	1	0	0	11215
+-12345	11215	0	0	1	0	1	12344
+-12345	11215	0	0	1	1	0	-11216
+-12345	11215	0	0	1	1	1	12345
+-12345	11215	0	1	0	0	0	-11215
+-12345	11215	0	1	0	0	1	-12344
+-12345	11215	0	1	0	1	0	11216
+-12345	11215	0	1	0	1	1	-12346
+-12345	11215	0	1	1	0	0	11214
+-12345	11215	0	1	1	0	1	-1130
+-12345	11215	0	1	1	1	0	-23560
+-12345	11215	0	1	1	1	1	23560
+-12345	11215	1	0	0	0	0	3015
+-12345	11215	1	0	0	0	1	-11281
+-12345	11215	1	0	0	1	0	-58273
+-12345	11215	1	0	0	1	1	58272
